# cso-ireland-data

./: .gitignore  LICENSE  README.md  config.yml  environment.yml  pyproject.toml  setup.py
notebooks/: http_cache.sqlite  notebook.py
references/r_csodata/: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md
references/r_csodata/R/: cso_get_data.R  cso_get_geo.R  cso_get_meta.R  cso_get_toc.R  csodata.R
references/r_csodata/inst/doc/: quick_start_guide.R  quick_start_guide.html
references/r_csodata/man/: cso_clear_cache.Rd  cso_disp_geo_meta.Rd  cso_disp_meta.Rd  cso_get_content.Rd  cso_get_data.Rd  cso_get_geo.Rd  cso_get_geo_meta.Rd  cso_get_interval.Rd  cso_get_meta.Rd  cso_get_toc.Rd  cso_get_var_values.Rd  cso_get_vars.Rd  cso_search_toc.Rd  csodata.Rd
references/r_csodata/vignettes/: quick_start_guide.Rmd
src/cso-data/: __init__.py
src/cso-data/data/: cso_data.py
src/cso_data/: __init__.py  __main__.py  config.py  cso_data.py
src/cso_data/data/: cso_data.py
src/cso_ireland_data/: __init__.py  cso_ireland_data.py
